fixed gap between images

--- a/style.scss
+++ b/style.scss
@@ -42,9 +42,10 @@
 }
 //1st gallery row
 .image-wrapper {
+  max-width: 1000px;
   display: grid;
   grid-auto-flow: column;
-  grid-auto-columns: calc(20% - 10px);
+  grid-auto-columns: minmax(max-content, auto);
   overflow-x: auto;
   gap: 10px;
   scroll-snap-type: x mandatory; //bez toga ne radi
